--- a/web/index.html
+++ b/web/index.html
@@ -60,22 +60,22 @@
       <h2 class="form-item-title dish__title">Посуда/прибор</h2>
       <div class="dish__name ">
         <label for="dish-name">Наименование</label>
-        <input type="text" name="" id="dish-name" class="dish-name">
+        <input type="text" name="" id="dish-name" class="form-input dish-name">
       </div>
       <div class="dish__code">
         <label for="dish-code">Код</label>
-        <input type="text" name="DishCode" id="dish-code" class="dish-code">
+        <input type="text" name="DishCode" id="dish-code" class="form-input dish-code">
       </div>
     </div>
     <div class="data-info__meas-unit meas-unit">
       <h2 class="form-item-title meas-unit__title">Единица измерения</h2>
       <div class="meas-unit__name ">
         <label for="meas-unit-name">Наименование</label>
-        <input type="text" name="measUnitName" id="meas-unit-name" class="dish-name">
+        <input type="text" name="measUnitName" id="meas-unit-name" class="form-input dish-name">
       </div>
       <div class="meas-unit__code">
         <label for="meas-unit-code">Код</label>
-        <input type="text" name="measUnitCode" id="meas-unit-code" class="dish-code">
+        <input type="text" name="measUnitCode" id="meas-unit-code" class="form-input dish-code">
       </div>
     </div>
   </div>
@@ -87,22 +87,22 @@
 
       <div class="emp__received">
         <label for="received-by-emp-1">Получено</label>
-        <input type="text" name="receivedByEmp1" id="received-by-emp-1" class="emp-received">
+        <input type="text" name="receivedByEmp1" id="received-by-emp-1" class="form-input emp-received">
       </div>
 
       <div class="emp__returned">
         <label for="returned-by-emp-1">Возвращено</label>
-        <input type="text" name="returnedByEmp1" id="returned-by-emp-1" class="emp-returned">
+        <input type="text" name="returnedByEmp1" id="returned-by-emp-1" class="form-input emp-returned">
       </div>
 
       <div class="emp__crashed">
         <label for="crashed-by-emp-1">Бой/лом</label>
-        <input type="text" name="crashedByEmp1" id="crashed-by-emp-1" class="emp-crashed">
+        <input type="text" name="crashedByEmp1" id="crashed-by-emp-1" class="form-input emp-crashed">
       </div>
 
       <div class="emp__shortfall">
         <label for="shortfall-by-emp-1">Недостача</label>
-        <input type="text" name="shortfallByEmp1" id="shortfall-by-emp-1" class="emp-shortfall">
+        <input type="text" name="shortfallByEmp1" id="shortfall-by-emp-1" class="form-input emp-shortfall">
       </div>
       
     </div>
